--- a/Notepad/resources.qrc
+++ b/Notepad/resources.qrc
@@ -1,3 +1,11 @@
 <RCC>
-    <qresource prefix="/imgs"/>
+    <qresource prefix="/icons">
+        <file>icons/open.png</file>
+        <file>icons/paste.png</file>
+        <file>icons/new.png</file>
+        <file>icons/cut.png</file>
+        <file>icons/copy.png</file>
+        <file>icons/close.png</file>
+    </qresource>
+    <qresource prefix="/cut"/>
 </RCC>
